# pycoffee

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
Coffee/CLI/: coffee.py  coffeed.py
Coffee/Core/: Diagnose.py  LogWatchDog.py  NtpSync.py  Plugin.py  Settings.py  Utils.py
Coffee/Data/: DataExtractor.py  DataFlow.py  DataLoader.py  DataModel.py  DataPattern.py  DataPoint.py  DataProcessor.py  DataStore.py  DataViz.py  Database.py  PatternMatchReport.py  Processors.py  TimestampPatterns.py  __init__.py
Coffee/Logkit/: LogWatchDog.py
Coffee/Logkit/utils/: LogTail.py
Coffee/Network/: NetSim.py  NetworkEmulator.py
Coffee/Playbook/PowerToys/: __init__.py
Coffee/Service/: asgi.py  settings.py  wsgi.py
Coffee/ServiceApp/MainApp/: views.py
CoffeePlaybooks/: README.md
examples/: extract_tencent_meeting.py  log_extract.py  simple_playbooks.py
src/coffee/cli/: coffee.py  coffeed.py
src/coffee/core/: ntpsync.py  playbook.py  utils.py
src/coffee/data/: __init__.py  database.py  dataextractor.py  datastore.py  dataviz.py  patterns.py  processor.py
src/coffee/logkit/: __init__.py
src/coffee/logkit/dataloader/: __init__.py  log_dataloader.py  log_file_dataloader.py  log_watch_dog_dataloader.py
src/coffee/logkit/dataloaders/: logfile_dataloader.py
src/coffee/playbook/powertoys/: __init__.py
src/coffee/service/: urls.py
tests/: test_Coffee_Data_DataStore.py
