[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycoffee"
version = "1.0.2"
authors = [
  { name="tkorays", email="tkorays@hotmail.com" },
]
description = "Programmers' tools. Enjoy Coffee time!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tkorays/pycoffee"
"Bug Tracker" = "https://github.com/tkorays/pycoffee/issues"